src/Domain/Compiler/Tests/Expression/__Baselines__/IntegerLiteral_Decimal_Error_NonDecimalDigit-StashIr.error
error: Expected ';', instead got 'g2'.
--> main.hs:8:10
  | 
8 | return -1g2;    
  |          ^^
